--- a/bike-sharing-demand.ipynb
+++ b/bike-sharing-demand.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e7ba795d",
+   "id": "4f56b7ef",
    "metadata": {},
    "source": [
     "# Bike Sharing Demand"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "158f3af0",
+   "id": "37fa442a",
    "metadata": {},
    "source": [
     "## Data Preparation"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4dbf47ef",
+   "id": "2f82967d",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d518ee7a",
+   "id": "5f38cb42",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65ba8a59",
+   "id": "8fcc42f8",
    "metadata": {},
    "source": [
     "Separate the features and the label."
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4054ce3a",
+   "id": "2a965257",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b66df12a",
+   "id": "1978dd01",
    "metadata": {},
    "source": [
     "## Data Wrangling"
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cba05bc",
+   "id": "6eeb5297",
    "metadata": {},
    "source": [
     "It seems that *datetime* is represented merely as a string and requires some conversion."
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d0451e0b",
+   "id": "35bed219",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b64e69f0",
+   "id": "cc6788c0",
    "metadata": {},
    "source": [
     "In addition, we will one-hot encode some categorical features."
@@ -261,8 +261,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "331371db",
+   "execution_count": 5,
+   "id": "2f8b5b80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01e67680",
+   "id": "c73f2ef7",
    "metadata": {},
    "source": [
     "Now we will analyze the target distribution."
@@ -279,8 +279,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "0de4990b",
+   "execution_count": 6,
+   "id": "c358211a",
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59a2fdc8",
+   "id": "b4bec982",
    "metadata": {},
    "source": [
     "The figure shows a skewed distribution. Let's log-scale the labels."
@@ -314,8 +314,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "fcf290b2",
+   "execution_count": 7,
+   "id": "997126fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,8 +326,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "2b458fc5",
+   "execution_count": 8,
+   "id": "8098ba53",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dd81fda",
+   "id": "857ac945",
    "metadata": {},
    "source": [
     "Split the dataset into train and test parts."
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "72adbdbc",
+   "id": "d9f27082",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa871d01",
+   "id": "044183c9",
    "metadata": {},
    "source": [
     "## Train Model"
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d19544cb",
+   "id": "444e7d9c",
    "metadata": {},
    "source": [
     "We are going to use LightGBM regressor."
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "269dbc5e",
+   "id": "38c8d838",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b96e1c6",
+   "id": "abc653ac",
    "metadata": {},
    "source": [
     "## Test Model"
@@ -420,25 +420,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "4cb70628",
+   "execution_count": 11,
+   "id": "726efb68",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Root mean squared log error: 0.318\n"
+      "Root mean squared log error: 0.313\n"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics import mean_squared_log_error\n",
     "\n",
-    "pred = lgbm_regressor.predict(X_test)\n",
-    "pred_expm1 = np.expm1(pred)\n",
     "y_test_expm1 = np.expm1(y_test)\n",
-    "msle = mean_squared_log_error(pred_expm1, y_test_expm1)\n",
+    "predictions = lgbm_regressor.predict(X_test)\n",
+    "predictions_expm1 = np.expm1(pred)\n",
+    "msle = mean_squared_log_error(y_test_expm1, predictions_expm1)\n",
     "rmsle = msle**0.5\n",
     "print(f'Root mean squared log error: {rmsle:.3f}')"
    ]
